hphp/test/slow/compilation/1301.php.expectf
Fatal error: Don't use $this in a static method, use static:: instead in %s/1301.php on line 8
